k8s/apps/blackbox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blackbox-exporter
  namespace: blackbox
  labels:
    app: blackbox-exporter
spec:
  type: ClusterIP
  selector:
    app: blackbox-exporter
  ports:
    - name: http
      port: 9115
      targetPort: 9115
      protocol: TCP
